chore(pre-commit): pre-commit run --all files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,5 @@ warn_unused_configs = true
 warn_unused_ignores = true
 
 [[tool.mypy.overrides]]
-module = ["*.tests.*"]
+module = ["tests.*"]
 ignore_errors = true
