--- a/.gitguardian.example.yml
+++ b/.gitguardian.example.yml
@@ -24,3 +24,13 @@ exit-zero: false # default: false
 verbose: false # default: false
 
 api-url: https://api.gitguardian.com
+
+# Maximum commits to scan in a pre-push hook.
+max-commits-for-hook: 50 # default: 50
+
+# Accept self-signed certificates for the API.
+allow-self-signed: false # default: False
+
+# Detectors to ignore.
+banlisted-detectors: # default: []
+  - Generic Password
