--- a/doc/pre-receive.sample
+++ b/doc/pre-receive.sample
@@ -1,27 +1,12 @@
-#!/bin/bash
+#!/bin/sh
 # ggshield as a pre-commit hook
 # Move `pre-receive.sample` to `.git/hooks/pre-receive`
 # Do not forget to `chmod +x .git/hooks/pre-receive`
 # either set an environment variable machine wide `GITGUARDIAN_API_KEY`
 # or uncomment and insert your key in the following line
+# if you use more than 2 push options, be sure to export them to the container
 
 #export GITGUARDIAN_API_KEY=<INSERT YOUR KEY>
 
-# Commit sha with all zeros
-zero_commit="0000000000000000000000000000000000000000"
-
-while read -r oldrev newrev refname; do
-    # Check if a zero sha
-    if [ "${oldrev}" = "${zero_commit}" ]; then
-        # List everything reachable from newrev but not any heads
-        span="$(git for-each-ref --format='%(refname)' 'refs/heads/*' | sed 's/^/\^/') ${newrev}"
-    else
-        span="${oldrev}...${newrev}"
-    fi
-
-    docker run --rm -v $(pwd):/data ggshield -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield scan commit-range "${span}" && continue
-
-    echo "ERROR: Your push was rejected because it contained a security incident"
-    echo "ERROR: Please contact your Git administrator if this was a false positive."
-    exit 1
-done
+set -x
+docker run -i --rm -v $(pwd):/data ggshield -e GIT_PUSH_OPTION_COUNT -e GIT_PUSH_OPTION_0 -e GIT_PUSH_OPTION_1 -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield scan pre-receive
