--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -35,6 +35,22 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Read info
+        id: tags
+        shell: bash
+        run: |
+          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
+          echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.tags.outputs.tag }}
+          release_name: ${{ steps.tags.outputs.tag }}
+          draft: false
+          prerelease: false
       - name: Release Notary Action
         uses: docker://aevea/release-notary:0.9.3
         env:
