feat(scan): add --ignore-default-excludes to exclude some patterns by default

--- a/.gitguardian.example.yml
+++ b/.gitguardian.example.yml
@@ -34,3 +34,6 @@ allow-self-signed: false # default: False
 # Detectors to ignore.
 banlisted-detectors: # default: []
   - Generic Password
+
+# Use default excluded vendors folders
+ignore-default-excludes: false # default: false
