test(ggshield): add pytest-socket

--- a/Pipfile
+++ b/Pipfile
@@ -22,8 +22,9 @@ mock = "*"
 mypy = "*"
 pre-commit = "*"
 pytest = "*"
+pytest-socket = "*"
 seed-isort-config = "*"
 snapshottest = "*"
 types-PyYAML = "*"
-vcrpy = "*"
 types-requests = "*"
+vcrpy = "*"
