docs(README): small documentation fixes

--- a/doc/pre-receive-docker.sample
+++ b/doc/pre-receive-docker.sample
@@ -1,6 +1,6 @@
 #!/bin/sh
 # ggshield as a pre-commit hook
-# Move `pre-receive.sample` to `.git/hooks/pre-receive`
+# Move `pre-receive-docker.sample` to `.git/hooks/pre-receive`
 # Do not forget to `chmod +x .git/hooks/pre-receive`
 # either set an environment variable machine wide `GITGUARDIAN_API_KEY`
 # or uncomment and insert your key in the following line
