--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -108,7 +108,7 @@ jobs:
         uses: actions/checkout@master
         with:
           repository: GitGuardian/homebrew-ggshield
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_GITHUB }}
           path: ./brew
 
       - name: Install dependencies
