--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 default_stages: [commit]
 repos:
   - repo: https://github.com/ambv/black
-    rev: 21.9b0
+    rev: 21.11b1
     hooks:
       - id: black
         language_version: python3
@@ -13,7 +13,7 @@ repos:
       - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910
+    rev: v0.910-1
     hooks:
       - id: mypy
         additional_dependencies: [types-requests, types-pyyaml]
@@ -26,7 +26,7 @@ repos:
       - id: check-yaml
 
   - repo: https://github.com/Woile/commitizen
-    rev: v2.18.1
+    rev: v2.20.0
     hooks:
       - id: commitizen
         # don't forget to run pre-commit install --hook-type commit-msg for this hook to run
@@ -57,13 +57,13 @@ repos:
         stages: [push]
 
   - repo: https://github.com/gitguardian/ggshield
-    rev: v1.8.1
+    rev: v1.10.5
     hooks:
       - id: ggshield
         language_version: python3
         stages: [commit]
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.8.0
+    rev: 5.10.1
     hooks:
       - id: isort
