--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -28,6 +28,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    needs: pypi
     continue-on-error: true
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     steps:
@@ -58,6 +59,21 @@ jobs:
         uses: docker://aevea/release-notary:0.9.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Make zipapp artifact
+        run: |
+          pip install shiv ggshield
+          shiv -c ggshield --reproducible --compile-pyc --compressed -o ggshield.pyz ggshield
+        shell: bash
+      - name: Upload .pyz
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./ggshield.pyz
+          asset_name: ggshield.pyz
+          asset_content_type: application/zip
 
   push_to_docker_hub:
     name: Push Docker image to Docker Hub
