chore: make it easier to update VCR cassettes
Do not activate pytest-socket by default, only turn it on in the CI.

This way one can update VCR cassettes by removing the cassette files, no
need to edit the pyproject.toml file. Proposed changes still need to not
do any network access for the CI to pass.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
           pipenv install --system --dev --ignore-pipfile
       - name: Test with pytest
         run: |
-          coverage run --source ggshield -m pytest --disable-pytest-warnings
+          coverage run --source ggshield -m pytest --disable-pytest-warnings --disable-socket
           coverage report --fail-under=80
           coverage xml
       - uses: codecov/codecov-action@v1
