--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -9,7 +9,7 @@
   name: GitGuardian Shield (pre-commit,docker)
   language: docker_image
   entry: -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield scan pre-commit
-  description: Runs ggshield to detect hadrcoded secrets, security vulnerabilities and policy breaks in docker images.
+  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks in docker images.
 - id: ggshield-push
   name: GitGuardian Shield (pre-push)
   entry: ggshield
