--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,7 @@
 - id: ggshield
   name: GitGuardian Shield (pre-commit)
   entry: ggshield
+  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks.
   stages: [commit]
   args: ['scan', 'pre-commit']
   language: python
@@ -8,9 +9,11 @@
   name: GitGuardian Shield (pre-commit,docker)
   language: docker_image
   entry: -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield scan pre-commit
+  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks in docker images.
 - id: ggshield-push
   name: GitGuardian Shield (pre-push)
   entry: ggshield
+  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks.
   args: ['scan', 'pre-push']
   stages: [push]
   pass_filenames: false
@@ -19,3 +22,4 @@
   name: GitGuardian Shield (pre-push,docker)
   language: docker_image
   entry: -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield scan pre-push
+  description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks in docker images.
