--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-click = "*"
 ggshield = { editable = true, path = "." }
-pygitguardian = "==1.3.4"
-python-dotenv = "*"
-pyyaml = "*"
+click = ">=8.0,<8.1"
+pygitguardian = ">=1.3.4,<1.4.0"
+pyyaml = ">=6.0,<6.1"
+python-dotenv = ">=0.19.1,<0.20.0"
 
 [dev-packages]
 black = "==21.11b1"
