--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ click = ">=8.0,<8.1"
 pygitguardian = ">=1.3.4,<1.4.0"
 pyyaml = ">=6.0,<6.1"
 python-dotenv = ">=0.19.1,<0.20.0"
+appdirs = "*"
 
 [dev-packages]
 black = "==21.11b1"
