--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,7 +6,36 @@ on:
       - 'v*'
 
 jobs:
-  pypi:
+  build_packages:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Install packaging tools
+        shell: bash
+        run: |
+          curl -L https://github.com/goreleaser/nfpm/releases/download/v2.15.0/nfpm_amd64.deb -o nfpm_amd64.deb
+          sudo dpkg -i nfpm_amd64.deb
+
+          pip install shiv==1.0.1
+
+      - name: Create packages
+        shell: bash
+        run: scripts/build-packages/build-packages
+
+      - name: Upload packages
+        uses: actions/upload-artifact@v3
+        with:
+          name: packages
+          path: |
+            dist
+            packages
+
+  push_to_pypi:
+    needs: build_packages
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     steps:
@@ -15,11 +44,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - name: Install dependencies
-        run: python -m pip install --upgrade pip setuptools wheel
-      - name: Build distribution
-        run: >-
-          python setup.py sdist bdist_wheel
+
+      - name: Download packages
+        uses: actions/download-artifact@v3
+        with:
+          name: packages
+
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
@@ -28,7 +58,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: pypi
+    needs: build_packages
     continue-on-error: true
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     steps:
@@ -36,12 +66,18 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Read info
         id: tags
         shell: bash
         run: |
-          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
           echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
+
+      - name: Download packages
+        uses: actions/download-artifact@v3
+        with:
+          name: packages
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@master
@@ -52,28 +88,25 @@ jobs:
           release_name: ${{ steps.tags.outputs.tag }}
           draft: false
           prerelease: false
+
+      - uses: xresloader/upload-to-github-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          file: "packages/ggshield-*.pyz;packages/ggshield_*.deb;packages/ggshield-*.rpm"
+          release_id: ${{ steps.create_release.outputs.id }}
+          overwrite: true
+          verbose: true
+          draft: false
+
       - name: Sleep for 3 seconds (otherwise release notary will not get the latest release)
         run: sleep 3s
         shell: bash
+
       - name: Release Notary Action
         uses: docker://aevea/release-notary:0.9.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Make zipapp artifact
-        run: |
-          pip install shiv ggshield
-          shiv -c ggshield --reproducible --compile-pyc --compressed -o ggshield.pyz ggshield
-        shell: bash
-      - name: Upload .pyz
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ggshield.pyz
-          asset_name: ggshield.pyz
-          asset_content_type: application/zip
 
   push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -109,7 +142,7 @@ jobs:
           tags: latest
 
   push_to_tap:
-    needs: pypi
+    needs: push_to_pypi
     name: Push to GitGuardian taps
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
@@ -123,7 +156,6 @@ jobs:
         id: tags
         shell: bash
         run: |
-          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
           echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
 
       - name: Checkout Homebrew-tap
