feat(config): implement management of auth config file

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ click = ">=8.0,<8.1"
 pygitguardian = ">=1.3.4,<1.4.0"
 pyyaml = ">=6.0,<6.1"
 python-dotenv = ">=0.19.1,<0.20.0"
+appdirs = ">=1.4.4,<1.5.0"
 
 [dev-packages]
 black = "==22.3.0"
@@ -26,5 +27,6 @@ seed-isort-config = "*"
 snapshottest = "*"
 types-PyYAML = "*"
 types-requests = "*"
+types-appdirs = "*"
 vcrpy = "*"
 pyfakefs = "*"
