--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ pyyaml = ">=6.0,<6.1"
 python-dotenv = ">=0.19.1,<0.20.0"
 
 [dev-packages]
-black = "==21.11b1"
+black = "==22.3.0"
 coverage = "*"
 flake8 = "*"
 flake8-isort = "*"
