--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-ggshield = { editable = true, path = "." }
+appdirs = ">=1.4.4,<1.5.0"
 click = ">=8.0,<8.1"
+ggshield = { editable = true, path = "." }
+oauthlib = "~=3.2"
 pygitguardian = ">=1.3.4,<1.4.0"
 pyyaml = ">=6.0,<6.1"
 python-dotenv = ">=0.19.1,<0.20.0"
-appdirs = ">=1.4.4,<1.5.0"
 
 [dev-packages]
 black = "==22.3.0"
@@ -28,5 +29,7 @@ snapshottest = "*"
 types-PyYAML = "*"
 types-requests = "*"
 types-appdirs = "*"
+types-oauthlib = "*"
+typing-extensions = "*"
 vcrpy = "*"
 pyfakefs = "*"
