--- a/Pipfile
+++ b/Pipfile
@@ -20,16 +20,19 @@ flake8-isort = "*"
 flake8-quotes = "*"
 ipdb = "*"
 mock = "*"
-mypy = "*"
+# Keep version synced with .pre-commit-config.yaml
+mypy = "0.942"
 pre-commit = "*"
 pytest = "*"
 pytest-socket = "*"
 seed-isort-config = "*"
 snapshottest = "*"
+# Keep types-* packages synced with .pre-commit-config.yaml
 types-PyYAML = "*"
 types-requests = "*"
 types-appdirs = "*"
 types-oauthlib = "*"
 typing-extensions = "*"
+
 vcrpy = "*"
 pyfakefs = "*"
