--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,7 +49,7 @@ repos:
     hooks:
       - id: ggshield-local
         name: GitGuardian Shield
-        entry: pipenv run ggshield scan pre-commit
+        entry: pipenv run ggshield secret scan pre-commit
         language: system
         types: [python]
         stages: [commit]
@@ -58,7 +58,7 @@ repos:
     hooks:
       - id: ggshield-local
         name: GitGuardian Shield
-        entry: pipenv run ggshield scan pre-push
+        entry: pipenv run ggshield secret scan pre-push
         language: system
         pass_filenames: false
         types: [python]
