chore: update Pipfile.lock
Also: freeze Python and pipenv version in update-pipfile-lock script.

--- a/scripts/update-pipfile-lock/Dockerfile
+++ b/scripts/update-pipfile-lock/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.7
 
 ARG UID
 
-RUN pip install pipenv
+RUN pip install pipenv==2022.5.2
 RUN useradd --uid $UID --create-home user
 
 WORKDIR /home/user/src
 
-CMD ["pipenv", "lock"]
+CMD ["pipenv", "--python", "3.7", "lock"]
