doc: Refresh README
- Unwrap lines
- "config" -> "configuration"
- "GITGUARDIAN_URL" -> "GITGUARDIAN_INSTANCE"
- GitGuardian shield -> ggshield
- Rewrite derogatory documentation ("you just have", "it's as simple as")
- Point users to `ggshield auth` instead of `GITGUARDIAN_API_KEY`
- Fix URL for CodeFactor badge

Co-authored-by: Eric <elacaille0@gmail.com>

--- a/.gitguardian.example.yml
+++ b/.gitguardian.example.yml
@@ -23,7 +23,7 @@ exit-zero: false # default: false
 
 verbose: false # default: false
 
-api-url: https://api.gitguardian.com
+instance: https://api.gitguardian.com
 
 # Maximum commits to scan in a hook.
 max-commits-for-hook: 50 # default: 50
