fix: fix example dashboard URL

--- a/.gitguardian.example.yml
+++ b/.gitguardian.example.yml
@@ -8,7 +8,8 @@ exit-zero: false # default: false
 
 verbose: false # default: false
 
-instance: https://api.gitguardian.com # default: https://api.gitguardian.com
+# The dashboard URL of the instance
+instance: https://dashboard.gitguardian.com # default: https://dashboard.gitguardian.com
 
 # Maximum commits to scan in a hook.
 max-commits-for-hook: 50 # default: 50
