--- a/tests/cassettes/test_iac_scan_error_response.yaml
+++ b/tests/cassettes/test_iac_scan_error_response.yaml
@@ -25,7 +25,7 @@ interactions:
       User-Agent:
       - pygitguardian/1.3.4 (Darwin;py3.10.4) ggshield
     method: POST
-    uri: https://api.gitguardian.com/v1/iacscan
+    uri: https://api.gitguardian.com/v1/iac_scan
   response:
     body:
       string: '{"detail": "Not found (404)"}'
