update action.yml for release on GitHub Marketplace

--- a/action.yml
+++ b/action.yml
@@ -1,14 +1,30 @@
 name: 'ggshield-action'
 description: 'Scan commits for hardcoded secrets and security policy breaks'
+author: GitGuardian <support@gitguardian.com>
+
+inputs:
+  args:
+    description: |
+      Arguments to be passed to ggshield secret scan
+      Options:
+        --show-secrets  Show secrets in plaintext instead of hiding them.
+        --exit-zero     Always return a 0 (non-error) status code, even if issues
+                        are found. The environment variable GITGUARDIAN_EXIT_ZERO can also be used
+                        to set this option.
+        --all-policies  Present fails of all policies (Filenames, FileExtensions,
+                        Secret Detection). By default, only secrets detection is
+                        shown.
+        -v, --verbose   Verbose display mode.
+    required: false
 branding:
-  icon: 'shield'
-  color: 'blue'
+  icon: "shield"
+  color: "blue"
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: "docker"
+  image: "Dockerfile"
   args:
     - ggshield
-    - -v
     - secret
     - scan
+    - -v
     - ci
