feat(iac): handle exceptions more gracefully for IaC
- Handle error validation for detail if detail is not in the response
- Remove display of chunks when there are errors
- Handle ReadTimeout errors from requests

### Testing
- Added unit tests

--- a/Pipfile
+++ b/Pipfile
@@ -22,11 +22,11 @@ flake8 = "*"
 flake8-isort = "*"
 flake8-quotes = "*"
 ipdb = "*"
-mock = "*"
 # Keep version synced with .pre-commit-config.yaml
 mypy = "0.942"
 pre-commit = "*"
 pytest = "*"
+pytest-mock = "*"
 pytest-socket = "*"
 seed-isort-config = "*"
 snapshottest = "*"
