--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 inline-quotes = double
 max-line-length = 120
 ignore = E203, W503
-exclude = **/snapshots/*.py, .venv
+exclude = **/snapshots/*.py, .venv, build
