fix(user_config): #278 Don't fail on unknown keys for user config
- Add a base config class to handle pre_load
- Add marshmallow_dataclass plugin for mypy

 Close #278

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,14 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
-          [types-requests, types-pyyaml, types-appdirs, types-oauthlib, click]
+          [
+            types-requests,
+            types-pyyaml,
+            types-appdirs,
+            types-oauthlib,
+            click,
+            marshmallow-dataclass,
+          ]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
