--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ warn_redundant_casts = true
 warn_unreachable = true
 warn_unused_configs = true
 warn_unused_ignores = true
+plugins = ["marshmallow_dataclass.mypy"]
 
 [[tool.mypy.overrides]]
 module = ["tests.*"]
