chore(ci): unify pre-commit and CI mypy configuration

--- a/Pipfile
+++ b/Pipfile
@@ -22,15 +22,13 @@ flake8 = "*"
 flake8-isort = "*"
 flake8-quotes = "*"
 ipdb = "*"
-# Keep version synced with .pre-commit-config.yaml
-mypy = "0.942"
+mypy = "==0.961"
 pre-commit = "*"
 pytest = "*"
 pytest-mock = "*"
 pytest-socket = "*"
 seed-isort-config = "*"
 snapshottest = "*"
-# Keep types-* packages synced with .pre-commit-config.yaml
 types-PyYAML = "*"
 types-requests = "*"
 types-appdirs = "*"
