--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pipenv pre-commit
+          pipenv install --dev --skip-lock
 
       - uses: actions/cache@v3
         with:
