chore(deps): add pytest-voluptuous to dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ pre-commit = "*"
 pytest = "*"
 pytest-mock = "*"
 pytest-socket = "*"
+pytest-voluptuous = "*"
 seed-isort-config = "*"
 snapshottest = "*"
 types-PyYAML = "*"
