--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,25 @@
-name: 'ggshield Local Action'
-description: 'Scan commits for security incidents (using repository image)'
+name: 'ggshield scan'
+description: 'Scan commits for hardcoded secrets and security policy breaks.'
+author: GitGuardian <support@gitguardian.com>
+
 branding:
   icon: 'shield'
   color: 'blue'
+  
+inputs:
+  args:
+    description: |
+      Arguments to be passed to ggshield secret scan
+      Options:        
+        --json                        Output results in JSON format  [default: False]
+        --show-secrets                Show secrets in plaintext instead of hiding them.
+        --all-policies                Present fails of all policies (Filenames, FileExtensions,
+                                      Secret Detection). By default, only Secret Detection is shown.
+        --exit-zero                   Always return a 0 (non-error) status code, even if incidents are found.
+        -v, --verbose                 Verbose display mode.
+        -b, --banlist-detector TEXT   Exclude results from a detector.
+    required: false
+
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -12,3 +29,4 @@ runs:
     - secret
     - scan
     - ci
+    - ${{ inputs.args }}
