--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ marshmallow-dataclass = ">=8.5.8,<8.6.0"
 pyyaml = ">=6.0,<6.1"
 python-dotenv = ">=0.19.1,<0.20.0"
 typeguard = ">=2.13.3,<2.14.0"
+charset-normalizer = ">=2.1.1,<2.2.0"
 
 [dev-packages]
 black = "==22.3.0"
