chore: Rework pipenv locking
Lock using Python 3.9 because in the root Dockerfile we use the
Pipfile.lock, and this Dockerfile uses Python 3.9.

In the CI, only use locking for Python 3.9 because using the Pipfile.lock
for other versions of Python often fails.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,8 @@ jobs:
   build:
     name: Build and Test
     runs-on: ${{ matrix.os }}
+    env:
+      PIPENV_ARGS: ''
     strategy:
       fail-fast: false
       matrix:
@@ -55,11 +57,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Use Pipfile.lock on locked version of Python
+        # Keep version in sync with scripts/update-pipfile-lock/Dockerfile
+        if: ${{ matrix.python-version }} == "3.9"
+        run: |
+          echo "PIPENV_ARGS=--ignore-pipfile" >> $GITHUB_ENV
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade pipenv
-          pipenv install --system --dev --ignore-pipfile
+          pipenv install --system --dev $PIPENV_ARGS
 
       - name: Install Windows dev dependencies
         if: matrix.os == 'windows-2022'
