--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,22 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-appdirs = ">=1.4.4,<1.5.0"
-click = ">=8.0,<8.1"
 ggshield = { editable = true, path = "." }
-oauthlib = "~=3.2"
-marshmallow = ">=3.15.0,<3.16.0"
-pygitguardian = ">=1.3.5,<1.4.0"
-marshmallow-dataclass = ">=8.5.8,<8.6.0"
-pyyaml = ">=6.0,<6.1"
-python-dotenv = ">=0.19.1,<0.20.0"
-typeguard = ">=2.13.3,<2.14.0"
+
+# Keep this section in sync with the setup(install_requires=) argument in setup.py
+appdirs = ">=1.4.4,<1.5.0"
 charset-normalizer = ">=2.1.1,<2.2.0"
+click = ">=8.0,<8.1"
+marshmallow = ">=3.15.0,<3.16.0"
+marshmallow-dataclass = ">=8.5.8,<8.6.0"
+oauthlib = "~=3.2"
+pygitguardian = ">=1.3.5,<1.4.0"
+python-dotenv = ">=0.19.1,<0.20.0"
+pyyaml = ">=6.0,<6.1"
 rich = ">=12.5.1,<12.6.0"
+
+# Indirect dependency of marshmallow, must appear here for Python 3.7 for some reason
+typeguard = ">=2.13.3,<2.14.0"
 
 [dev-packages]
 black = "==22.3.0"
