--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -164,9 +164,28 @@ jobs:
           path: ./homebrew-ggshield
 
       - name: Install dependencies
+        shell: bash
         run: |
           python -m pip install --upgrade pip
-          pip install ggshield homebrew-pypi-poet
+
+          pip install homebrew-pypi-poet
+
+          # Install the newly released version of ggshield. Retry in case of
+          # failure because it can take some time before the version we just
+          # published on pypi.org is available for download.
+          version=${GITHUB_REF/refs\/tags\/v/}
+          max_tries=5
+          for try in $(seq 1 $max_tries) ; do
+              echo "Downloading ggshield==$version, attempt $try/$max_tries"
+              if pip install ggshield==$version ; then
+                  exit 0
+              else
+                  sleep 10
+              fi
+          done
+
+      - name: Update Homebrew formulas
+        run: |
           poet -f ggshield \
               | sed 's/Shiny new formula/Detect secrets in source code, scan your repos and docker images for leaks/g' \
               | sed '7a\  license "MIT"' \
