chore: make sure the release is not published automatically
Hopefully this is enough to fix the release mails not containing the
release notes.

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           tag_name: ${{ steps.tags.outputs.tag }}
           release_name: ${{ steps.tags.outputs.tag }}
-          draft: false
+          draft: true
           prerelease: false
 
       - uses: xresloader/upload-to-github-release@v1
