fix(pre-commit): fix `pre-commit` calling ggshield multiple times
By default, the pre-commit framework calls hooks with files to scan as
arguments. If the file list is too long, it splits it and run scans in
parallel.

This is not adapted for ggshield because `ggshield secret scan pre-commit`
(and `pre-push`) gets the content to scan from the commit ID, the arguments
are ignored. When pre-commit calls ggshield twice, ggshield scans the whole
commit twice.

By telling pre-commit to not call ggshield with filenames, we avoid this
issue: ggshield is only called once. The loss of parallelism is not an
problem since ggshield handles parallelism itself.

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,3 +1,4 @@
+# We set `pass_filenames` to `false` because ggshield gets filenames from commit IDs.
 - id: ggshield
   name: ggshield (pre-commit)
   entry: ggshield
@@ -5,21 +6,27 @@
   stages: [commit]
   args: ['secret', 'scan', 'pre-commit']
   language: python
+  pass_filenames: false
+
 - id: docker-ggshield
   name: ggshield (pre-commit,docker)
   language: docker_image
   entry: -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield secret scan pre-commit
   description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks in docker images.
+  pass_filenames: false
+
 - id: ggshield-push
   name: ggshield (pre-push)
   entry: ggshield
   description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks.
   args: ['secret', 'scan', 'pre-push']
   stages: [push]
-  pass_filenames: false
   language: python
+  pass_filenames: false
+
 - id: docker-ggshield-push
   name: ggshield (pre-push,docker)
   language: docker_image
   entry: -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield secret scan pre-push
   description: Runs ggshield to detect hardcoded secrets, security vulnerabilities and policy breaks in docker images.
+  pass_filenames: false
