--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -51,7 +51,7 @@ jobs:
           name: packages
 
       - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.pypi_password }}
