--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pipenv pre-commit
-          pipenv install --dev
+          python -m pip install pipenv==2022.10.4 pre-commit
+          pipenv install --dev --skip-lock
 
       - uses: actions/cache@v3
         with:
@@ -68,7 +68,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade pipenv
+          python -m pip install --upgrade pipenv==2022.10.4
           pipenv install --system --dev
 
       - name: Install Windows dev dependencies
