chore: make pre-commit call mypy the same way we call mypy in the CI
This is required by the next commit: it adds another script implementing
a __main__ module, and mypy complains the __main__ module is implemented
more than once.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,8 +23,8 @@ repos:
         types: [python]
         # use require_serial so that script is only called once per commit
         require_serial: true
-        # print the number of files as a sanity-check
-        verbose: true
+        # do not pass filenames, otherwise mypy might scan files we don't want it to scan
+        pass_filenames: false
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
