chore: simplify GitHub actions
Instead of using different Docker images for the "root" image and the
action:
- include the action entrypoints in the root image, and make the actions
  use these files.
- make unstable actions use the root Dockerfile, and thus rebuild the
  image each time they are run, to ensure we always test with the latest
  content of the Docker image.

These changes makes scripts/action-entrypoint-generator useless now, so
remove it.

--- a/actions/iac/action.yml
+++ b/actions/iac/action.yml
@@ -21,6 +21,7 @@ branding:
   color: 'blue'
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'gitguardian/ggshield:latest'
+  entrypoint: '/app/actions/iac/entrypoint.sh'
   args:
     - ${{ inputs.args }}
