--- a/actions/secret/action.yml
+++ b/actions/secret/action.yml
@@ -21,6 +21,7 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'gitguardian/ggshield:latest'
+  entrypoint: '/app/actions/secret/entrypoint.sh'
   args:
     - ${{ inputs.args }}
