--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -71,7 +71,7 @@ jobs:
         id: tags
         shell: bash
         run: |
-          echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
+          echo "TAG::${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
 
       - name: Download packages
         uses: actions/download-artifact@v3
