--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ module = ["tests.*"]
 ignore_errors = true
 
 [tool.scriv]
-version = "literal: pygitguardian/__init__.py: __version__"
+version = "literal: ggshield/__init__.py: __version__"
 format = "md"
 md_header_level = "2"
 insert_marker = "# Changelog"
