chore: fix CI not being able to create the GH release
The code extracting the tag was wrong. I broke it while porting it away
from `::set-output`.

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -71,7 +71,7 @@ jobs:
         id: tags
         shell: bash
         run: |
-          echo "TAG::${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
+          echo "tag=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
 
       - name: Download packages
         uses: actions/download-artifact@v3
