feat: reformat outputs to always show if the secret is known by user's gitguardian dashboard

--- a/tests/unit/cassettes/multiple_secrets.yaml
+++ b/tests/unit/cassettes/multiple_secrets.yaml
@@ -85,7 +85,7 @@ interactions:
         mode:
           - path
       method: POST
-      uri: https://api.gitguardian.com/v1/multiscan
+      uri: https://api.gitguardian.com/v1/multiscan?ignore_known_secrets=True
     response:
       body:
         string:
