--- a/.github/workflows/perfbench.yml
+++ b/.github/workflows/perfbench.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade pipenv
-          pipenv install --system
+          pipenv install --system --skip-lock
 
       - name: Setup benchmark
         run: |
