--- a/tests/unit/cassettes/test_files_yes.yaml
+++ b/tests/unit/cassettes/test_files_yes.yaml
@@ -84,7 +84,7 @@ interactions:
         mode:
           - path
       method: POST
-      uri: https://api.gitguardian.com/v1/multiscan
+      uri: https://api.gitguardian.com/v1/multiscan?ignore_known_secrets=True
     response:
       body:
         string:
