--- a/tests/unit/cassettes/test_scan_file_secret.yaml
+++ b/tests/unit/cassettes/test_scan_file_secret.yaml
@@ -86,7 +86,7 @@ interactions:
         mode:
           - docker
       method: POST
-      uri: https://api.gitguardian.com/v1/multiscan
+      uri: https://api.gitguardian.com/v1/multiscan?ignore_known_secrets=True
     response:
       body:
         string:
