--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,18 +12,16 @@ repos:
     hooks:
       - id: flake8
 
-  # use a "local" repo and not the mypy repo to avoid having to duplicate the
-  # list of types-* packages
+  # use a "local" repo and not the pyright hook to ensure pyright runs in the same virtualenv
+  # as the rest of the code
   - repo: local
     hooks:
-      - id: mypy
-        name: mypy
-        entry: 'pipenv run mypy'
+      - id: pyright
+        name: pyright
+        entry: 'pipenv run pyright'
         language: system
         types: [python]
-        # use require_serial so that script is only called once per commit
-        require_serial: true
-        # do not pass filenames, otherwise mypy might scan files we don't want it to scan
+        # do not pass filenames, otherwise Pyright might scan files we don't want it to scan
         pass_filenames: false
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
