--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,6 @@ flake8 = "*"
 flake8-isort = "*"
 flake8-quotes = "*"
 ipdb = "*"
-mypy = "==1.3.0"
 pre-commit = "*"
 pytest = "7.2.1" # pinning because of conflicting dependencies with exceptiongroup 
 pytest-mock = "*"
@@ -22,10 +21,6 @@ pytest-socket = "*"
 pytest-voluptuous = "*"
 seed-isort-config = "*"
 snapshottest = "*"
-types-PyYAML = "*"
-types-requests = "*"
-types-appdirs = "*"
-types-oauthlib = "*"
 typing-extensions = "*"
 
 vcrpy = ">=4.3.0,!=4.3.1,<4.4.0"
@@ -37,3 +32,4 @@ urllib3 = "<2"
 
 pyfakefs = ">=5.2.0"
 scriv = { version = "*", extras = ["toml"] }
+pyright = "==1.1.313"
