chore(sca): #PLC-809 rename touched_files to files in ComputeSCAFiles

--- a/tests/unit/cassettes/test_compute_sca_files.yaml
+++ b/tests/unit/cassettes/test_compute_sca_files.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"touched_files": ["Pipfile", "something_else"]}'
+      body: '{"files": ["Pipfile", "something_else"]}'
       headers:
         Accept:
           - '*/*'
